# nyx

./: .dockerignore  .env.example  .gitignore  .npmrc  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  clippy.toml  deny.toml  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  turbo.json
Maya/: README.md
Monad/Akash/: Cargo.toml  README.md
Monad/Akash/src/: client.rs  download.rs  lib.rs  paths.rs  presigned.rs  upload.rs
Monad/Akash/tests/: stories_presign.rs  stories_presign.test.rs
Monad/Brizo/: Cargo.toml  README.md
Monad/Brizo/src/: client.rs  indexes.rs  lib.rs  query.rs  sync.rs
Monad/Heimdall/: Cargo.toml  README.md
Monad/Heimdall/src/: auth_layer.rs  auth_throttle.rs  client_ip.rs  config.rs  csrf.rs  health.rs  jwt.rs  lib.rs  main.rs  proxy.rs  rate_limit.rs  routes.rs  state.rs  token_exchange.rs  websocket.rs
Monad/Heimdall/tests/: auth_layer_test.rs  config_test.rs  health_test.rs  integration_test.rs  jwt_test.rs  proxy_test.rs
Monad/Heka/: Cargo.toml
Monad/Heka/src/: alias.rs  client.rs  identity.rs  jwt.rs  lib.rs  link_policy.rs  nyx_id.rs  types.rs
Monad/Heka/tests/: integration_privacy_matrix.rs  kratos_client_core.rs
Monad/Lethe/: Cargo.toml  README.md
Monad/Lethe/src/: client.rs  helpers.rs  keys.rs  lib.rs  rate_limit.rs  session.rs
Monad/Lethe/tests/: stories_helpers_test.rs
Monad/Mnemosyne/: Cargo.toml  README.md
Monad/Mnemosyne/src/: ext.rs  lib.rs  migrate.rs  pool.rs  transaction.rs
Monad/Nun/: Cargo.toml  Corgo.toml  README.md
Monad/Nun/src/: app.rs  config.rs  error.rs  id.rs  lib.rs  pagination.rs  sensitive.rs  testing.rs  time.rs  validation.rs
Monad/Nun/src/types/: app.rs  feed_mode.rs  link_policy.rs  mod.rs
Monad/Ogma/: Cargo.toml  README.md
Monad/Ogma/src/: aliases.rs  client.rs  lib.rs  messages.rs  privacy.rs  room.rs
Monad/Oya/: Cargo.toml  README.md
Monad/Oya/src/: config.rs  events.rs  image.rs  lib.rs  pipeline.rs  video.rs
Monad/Ushas/: Cargo.toml  README.md
Monad/Ushas/src/: error.rs  gorush.rs  grouping.rs  in_app.rs  lib.rs  preferences.rs
Monad/api/: Cargo.toml  README.md
Monad/api/src/: lib.rs  nyx_id.rs  openapi.rs  response.rs  server.rs
Monad/api/src/extract/: auth.rs  cursor.rs  mod.rs  validated.rs
Monad/api/src/middleware/: app_context.rs  auth.rs  mod.rs  rate_limit.rs  request_id.rs  tracing.rs
Monad/api/tests/: contracts_test.rs
Monad/events/: Cargo.toml  README.md
Monad/events/src/: adapter.rs  client.rs  compat.rs  envelope.rs  lib.rs  publisher.rs  subjects.rs  subscriber.rs
Monad/events/tests/: event_boundary.rs
Monad/xtask/: Cargo.toml  README.md
Monad/xtask/src/: auth.rs  env.rs  lib.rs  main.rs
Monad/xtask/src/commands/: create_account.rs  db_reset.rs  input.rs  login.rs  migrate.rs  mod.rs  nats_setup.rs  new_app.rs  seed.rs
Monad/xtask/tests/: migrate_test.rs  nats_setup_test.rs  new_app_test.rs  seed_test.rs
apps/Themis/: Cargo.toml  OLD.md  README.md
apps/Uzume/Uzume-discover/: Cargo.toml  README.md
apps/Uzume/Uzume-discover/src/: config.rs  lib.rs  main.rs  state.rs
apps/Uzume/Uzume-discover/src/handlers/: explore.rs  mod.rs  search.rs
apps/Uzume/Uzume-discover/src/models/: explore.rs  mod.rs  search_result.rs  trending.rs
apps/Uzume/Uzume-discover/src/queries/: engagement.rs  mod.rs  trending.rs
apps/Uzume/Uzume-discover/src/routes/: mod.rs
apps/Uzume/Uzume-discover/src/services/: discover_ranker.rs  mod.rs  trending.rs
apps/Uzume/Uzume-discover/src/workers/: mod.rs  search_sync.rs  trending_updater.rs
apps/Uzume/Uzume-discover/tests/services/: discover_ranker_test.rs
apps/Uzume/Uzume-feed/: Cargo.toml  README.md
apps/Uzume/Uzume-feed/src/: config.rs  lib.rs  main.rs  state.rs
apps/Uzume/Uzume-feed/src/handlers/: interactions.rs  mod.rs  posts.rs
apps/Uzume/Uzume-feed/src/models/: comment.rs  mod.rs  post.rs
apps/Uzume/Uzume-feed/src/queries/: comments.rs  likes.rs  mod.rs  posts.rs
apps/Uzume/Uzume-feed/src/routes/: mod.rs
apps/Uzume/Uzume-feed/src/services/: feed.rs  interactions.rs  mod.rs
apps/Uzume/Uzume-feed/tests/: security_tests.rs  step1_feed_chronological.rs
apps/Uzume/Uzume-profiles/: Cargo.toml  Cargo.tomlx  README.md
apps/Uzume/Uzume-profiles/src/: config.rs  lib.rs  main.rs  state.rs
apps/Uzume/Uzume-profiles/src/handlers/: follow.rs  mod.rs  profile.rs
apps/Uzume/Uzume-profiles/src/models/: follow.rs  mod.rs  profile.rs
apps/Uzume/Uzume-profiles/src/queries/: follow.rs  mod.rs  profiles.rs
apps/Uzume/Uzume-profiles/src/routes/: mod.rs
apps/Uzume/Uzume-profiles/src/services/: follow.rs  mod.rs  profile.rs
apps/Uzume/Uzume-profiles/src/workers/: mod.rs  profile_stub.rs  search_sync.rs
apps/Uzume/Uzume-profiles/tests/: step1_profiles.rs  step1_profiles_endpoints.rs  task11_event_boundary.rs
apps/Uzume/Uzume-profiles/tests/api/: profile_api_test.rs
apps/Uzume/Uzume-reels/: Cargo.toml  README.md
apps/Uzume/Uzume-reels/src/: config.rs  lib.rs  main.rs  state.rs
apps/Uzume/Uzume-stories/: Cargo.toml  README.md
apps/Uzume/Uzume-stories/src/: config.rs  lib.rs  main.rs  state.rs
tests/: Cargo.toml  ONBOARDING.md  README.md
tests/benches/: security_bench.rs
tests/compose/: sandbox.yml
tests/contracts/: verify_step1_contract_lock.sh
tests/fuzz/: Cargo.toml
tests/fuzz/fuzz_targets/: fuzz_target_token_validation.rs
tests/scripts/: sandbox_e2e.sh
tests/src/: asserts.rs  builders.rs  common.rs  fixtures.rs  generators.rs  lib.rs  mocks.rs  sandbox.rs  security.rs
tests/tests/: auth_integration.rs  e2e.rs  integration.rs  property.rs  security.rs
tests/tests/auth/: email_otp.rs  email_password.rs  helpers.rs  nyx_id_tests.rs  recovery.rs  session_tests.rs
tests/tests/e2e/: auth_flow.rs  content.rs  cross_app.rs  phase3_full_backend.rs  registration.rs  sandbox_smoke.rs  security_regression.rs
tests/tests/integration/: snapshot_contracts.rs  tooling_coverage.rs
tests/tests/property/: generators_property.rs
tests/tests/security/: authz_bypass.rs  edge_cases.rs  payload_sweep.rs  privacy_violations.rs  sql_injection.rs  xss.rs
(+282 files in other folders)
