[workspace]
resolver = "2"
members = [
    # Foundation
    "Monad/Nun",
    # Platform crates
    "Monad/Heka",
    "Monad/Mnemosyne",
    "Monad/Lethe",
    "Monad/events",
    "Monad/Akash",
    "Monad/Brizo",
    "Monad/Ogma",
    "Monad/api",
    # Workers + media
    "Monad/Oya",
    "Monad/Ushas",
    # Gateway + tooling
    "Monad/Heimdall",
    "Monad/xtask",
    # Uzume services
    "apps/Uzume/Uzume-profiles",
    "apps/Uzume/Uzume-feed",
    "apps/Uzume/Uzume-stories",
    "apps/Uzume/Uzume-reels",
    "apps/Uzume/Uzume-discover",
    # Future apps (stubs)
    "apps/Anteros",
    "apps/Themis",
    # Unified test crate
    "tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/divyumsinghal/nyx"
rust-version = "1.85"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP framework
axum = { version = "0.8", features = ["ws", "multipart"] }
axum-extra = { version = "0.10", features = ["typed-header", "cookie"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = [
    "cors",
    "trace",
    "compression-gzip",
    "limit",
    "timeout",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
] }

# Cache (Redis protocol — works with DragonflyDB)
fred = { version = "10", features = ["subscriber-client", "serde-json"] }

# Event bus
async-nats = "0.39"

# Object storage (S3-compatible)
rust-s3 = { version = "0.36", features = ["tokio-rustls-tls"] }

# Search
meilisearch-sdk = "0.28"

# HTTP client (for calling Kratos, Gorush, etc.)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Auth
jsonwebtoken = "9"

# IDs
uuid = { version = "1", features = ["v7", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Tracing & observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.28"
opentelemetry = "0.27"

# Config
config = { version = "0.14", default-features = false }

# Validation
validator = { version = "0.19", features = ["derive"] }

# Cursor encoding (for pagination)
rmp-serde = "1"
base64 = "0.22"

# API docs
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# CLI parsing (used by nyx-xtask and future binaries)
clap = { version = "4", features = ["derive", "env"] }

# Testing
tokio-test = "0.4"
testcontainers = "0.24"
testcontainers-modules = { version = "0.11", features = ["postgres", "nats"] }
tempfile = "3"
