[package]
name = "Akash"
description = "Nyx S3 storage primitives for media"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/divyumsinghal/nyx"
rust-version = "1.85"

[lib]
name = "akash"
path = "src/lib.rs"

[dependencies]
nun = { package = "Nun", path = "../Nun" }
chrono = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }
