[package]
name = "Akash"
description = "Nyx S3 storage primitives for media"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/divyumsinghal/nyx"

[lib]
name = "akash"
path = "src/lib.rs"

[dependencies]
nun = { package = "Nun", path = "../Nun" }
chrono = { workspace = true }
serde = { workspace = true }
rust-s3 = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
