[package]
name = "Brizo"
description = "Nyx platform: Meilisearch search client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
Nun = { path = "../Nun" }
meilisearch-sdk = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
