[package]
name = "Heimdall"
description = "API gateway binary: routing, auth, rate limiting"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "heimdall"
path = "src/main.rs"

[dependencies]
nun = { package = "Nun", path = "../Nun" }
