[package]
name = "Heka"
description = "Nyx Ory Kratos client and identity adapter"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/divyumsinghal/nyx"
rust-version = "1.85"

[lib]
name = "heka"
path = "src/lib.rs"

[dependencies]
nun = { package = "Nun", path = "../Nun" }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
regex = "1"
tracing = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uzume_profiles = { package = "Uzume-profiles", path = "../../apps/Uzume/Uzume-profiles" }
