[package]
name = "Mnemosyne"
description = "PostgreSQL: pool, migrations, transaction helpers"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "mnemosyne"
path = "src/lib.rs"

[dependencies]
nun = { package = "Nun", path = "../Nun", features = ["sqlx"] }
sqlx = { workspace = true }
tokio = { workspace = true }
