[package]
name = "Mnemosyne"
description = "Nyx platform: PostgreSQL pool + migration runner"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
Nun = { path = "../Nun" }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
