[package]
name = "Ogma"
description = "Matrix/Continuwuity: app-scoped rooms, privacy isolation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "ogma"
path = "src/lib.rs"

[dependencies]
nun = { package = "Nun", path = "../Nun" }
