[package]
name = "Oya"
description = "Media processing pipeline (library + worker binary)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "oya"
path = "src/lib.rs"

[[bin]]
name = "oya-worker"
path = "src/bin/worker.rs"

[dependencies]
nun = { package = "Nun", path = "../Nun" }
events = { package = "nyx-events", path = "../events" }
akash = { package = "Akash", path = "../Akash" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
async-nats = { workspace = true }
futures = "0.3"
image = { version = "0.24", default-features = false, features = ["jpeg", "png", "webp"] }
fast_image_resize = "3"

[dev-dependencies]
tempfile = "3"
