[package]
name = "Ushas"
description = "Notification dispatch (library + worker binary)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "ushas"
path = "src/lib.rs"

[dependencies]
nun = { package = "Nun", path = "../Nun" }
