[package]
name = "nyx-events"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "nyx_events"
path = "src/lib.rs"

[dependencies]
nun = { package = "Nun", path = "../Nun" }
async-trait = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
