[package]
name = "nyx-events"
description = "Typed Nyx event contracts and lifecycle subjects — NATS JetStream pub/sub"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "events"
path = "src/lib.rs"

[dependencies]
nun = { package = "Nun", path = "../Nun" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
async-nats = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
futures = "0.3"
async-stream = "0.3"

[dev-dependencies]
chrono = { workspace = true }
