[package]
name = "nyx-xtask"
description = "Nyx developer CLI: migrate, db-reset, seed, nats-setup, new-app"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "nyx-xtask"
path = "src/main.rs"

[lib]
name = "nyx_xtask"
path = "src/lib.rs"

[features]
integration = []

[dependencies]
tokio = { workspace = true }
sqlx = { workspace = true }
async-nats = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
heka = { package = "Heka", path = "../Heka" }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
regex-lite = { workspace = true }
rpassword = "7"
validator = { version = "0.19", features = ["derive"] }
zxcvbn = "3"
sha1 = "0.10"

[dev-dependencies]
tokio = { workspace = true }
testcontainers = "0.23.3"
testcontainers-modules = { workspace = true }
tempfile = { workspace = true }
