[package]
name = "Themis"
description = "Marketplace app"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "themis"
path = "src/lib.rs"

[dependencies]
nun = { package = "Nun", path = "../../Monad/Nun" }
