[package]
name = "Uzume-feed"
description = "Uzume feed service: posts, likes, comments, home timeline (chronological v1)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "uzume-feed"
path = "src/main.rs"

[lib]
name = "uzume_feed"
path = "src/lib.rs"

[dependencies]
nun = { package = "Nun", path = "../../../Monad/Nun" }
heka = { package = "Heka", path = "../../../Monad/Heka" }
nyx-events = { package = "nyx-events", path = "../../../Monad/events" }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = "0.1"
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
