[package]
name = "Uzume-profiles"
version = "0.1.0"
edition = "2021"
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "uzume-profiles"
path = "src/main.rs"

[lib]
name = "uzume_profiles"
path = "src/lib.rs"

[dependencies]
 nun = { package = "Nun", path = "../../../Monad/Nun", features = ["sqlx", "validator"] }
heka = { package = "Heka", path = "../../../Monad/Heka" }
nyx-api = { package = "nyx-api", path = "../../../Monad/api" }
mnemosyne = { package = "Mnemosyne", path = "../../../Monad/Mnemosyne" }
fred = { workspace = true }
lethe = { package = "Lethe", path = "../../../Monad/Lethe" }
nyx-events = { package = "nyx-events", path = "../../../Monad/events" }
brizo = { package = "Brizo", path = "../../../Monad/Brizo" }

axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = "1"
validator = { workspace = true, features = ["derive"] }
async-trait = "0.1"
futures = "0.3"
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
